GPL/P6/tests/t022.err
Semantic error on line 3: Variable 'c' previously declared.
