GPL/P6/tests/t022.gpl
forward animation move(circle c);

string c;
